# tsu-todo

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  storage.py  tasks.py  test.sh
tests/: test_main.py  test_storage.py  test_tasks.py
