[project]
name = "tsutodo"
version = "0.1.0"
description = "A CLI todo application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "rich>=15.0.0",
]

[project.scripts]
todo = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]